--- a/index.html
+++ b/index.html
@@ -3,25 +3,158 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Password Protected Page</title>
+  <title>密码保护页面 - 文件管理</title>
+  <style>
+    /* 样式 */
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      padding: 0;
+      background-color: #f4f4f9;
+    }
+    .container {
+      width: 80%;
+      margin: 20px auto;
+    }
+    .folder {
+      background-color: #8bc34a;
+      padding: 20px;
+      margin: 10px;
+      cursor: pointer;
+      display: inline-block;
+      color: white;
+      border-radius: 5px;
+      text-align: center;
+      width: 120px;
+    }
+    .file {
+      background-color: #3f51b5;
+      padding: 10px;
+      margin: 5px;
+      cursor: pointer;
+      display: inline-block;
+      color: white;
+      border-radius: 5px;
+    }
+    #fileUpload {
+      display: none;
+    }
+    .error {
+      color: red;
+    }
+  </style>
+</head>
+<body>
   <script type="text/javascript">
-    var password = "abc.americ.us.kg";  // 设定你的密码
-    var passcheck = function() {
+    var password = "abc.americ.us.kg";  // 设置密码
+    var isAuthenticated = false;
+
+    // 密码验证
+    function passwordCheck() {
       var userpassword = prompt("请输入密码:");
       if (userpassword === password) {
+        isAuthenticated = true;
         document.getElementById('content').style.display = 'block';
+        document.getElementById('login').style.display = 'none';
       } else {
         alert("密码错误!");
-        window.location = 'about:blank';  // 密码错误后关闭页面
+        window.location = 'about:blank'; // 密码错误后清空页面
       }
-    };
-    window.onload = passcheck;
+    }
+
+    window.onload = passwordCheck;
   </script>
-</head>
-<body style="display:none;">
-  <div id="content" style="display:none;">
-    <h1>欢迎来到我的GitHub页面</h1>
-    <p>这是需要密码保护的页面内容。</p>
+
+  <!-- 登录区域 -->
+  <div id="login" style="text-align:center; padding-top:50px;">
+    <h2>请输入密码才能访问此页面</h2>
   </div>
+
+  <!-- 受密码保护的内容 -->
+  <div id="content" style="display:none;">
+    <div class="container">
+      <h1>文件管理</h1>
+      <div id="folders"></div>
+      <button onclick="createFolder()">创建文件夹</button>
+      <hr>
+      <input type="file" id="fileUpload" onchange="handleFileUpload(event)">
+      <button onclick="document.getElementById('fileUpload').click()">上传文件</button>
+      <div id="files"></div>
+    </div>
+  </div>
+
+  <script type="text/javascript">
+    var files = []; // 模拟的文件列表
+    var folders = []; // 模拟的文件夹列表
+
+    // 创建文件夹
+    function createFolder() {
+      var folderName = prompt("请输入文件夹名称:");
+      if (folderName) {
+        folders.push(folderName);
+        renderFolders();
+      }
+    }
+
+    // 渲染文件夹
+    function renderFolders() {
+      var folderContainer = document.getElementById('folders');
+      folderContainer.innerHTML = "";
+      folders.forEach(function(folder, index) {
+        var folderElement = document.createElement('div');
+        folderElement.className = "folder";
+        folderElement.textContent = folder;
+        folderElement.onclick = function() {
+          alert("进入文件夹：" + folder);
+        };
+        folderContainer.appendChild(folderElement);
+      });
+    }
+
+    // 上传文件并显示
+    function handleFileUpload(event) {
+      var file = event.target.files[0];
+      if (file) {
+        files.push(file);
+        renderFiles();
+      }
+    }
+
+    // 渲染文件
+    function renderFiles() {
+      var fileContainer = document.getElementById('files');
+      fileContainer.innerHTML = "";
+      files.forEach(function(file, index) {
+        var fileElement = document.createElement('div');
+        fileElement.className = "file";
+        fileElement.textContent = file.name;
+        fileElement.setAttribute('draggable', true);
+        fileElement.ondragstart = function(event) {
+          event.dataTransfer.setData("fileIndex", index);
+        };
+        fileElement.ondragover = function(event) {
+          event.preventDefault();
+        };
+        fileElement.ondrop = function(event) {
+          event.preventDefault();
+          var draggedIndex = event.dataTransfer.getData("fileIndex");
+          if (draggedIndex != index) {
+            var draggedFile = files[draggedIndex];
+            files[draggedIndex] = files[index];
+            files[index] = draggedFile;
+            renderFiles();
+          }
+        };
+        var deleteBtn = document.createElement('button');
+        deleteBtn.textContent = "删除";
+        deleteBtn.onclick = function() {
+          files.splice(index, 1);
+          renderFiles();
+        };
+        fileElement.appendChild(deleteBtn);
+        fileContainer.appendChild(fileElement);
+      });
+    }
+  </script>
 </body>
 </html>
